--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     buildToolsVersion "29.0.2"
     defaultConfig {
         applicationId "com.melisa.loodos"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -112,5 +112,8 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
+
+    // Lottie
+    implementation 'com.airbnb.android:lottie:2.8.0'
 
 }
